# old_gwemopt

./: .gitignore  README.md  pyproject.toml
gwemopt/: ToO_manager.py  _version.py  catalog.py  plotting.py  rankedTilesGenerator.py  segments.py  tiles.py  utils.py
gwemopt/data/config/: ALi-50.config  ASTEP.config  ATLAS.config  Abastumani-T70.config  Abastunami-T48.config  Abastunami-T70.config  BlackGEM.config  C2PU.config  CAHA.config  CFHT-MEGACAM.config  CFHT-WIRCAM.config  CFHT.config  Colibri.config  DDOTI.config  DECam.config  F60.config  FAKE.config  FZU-Auger.config  FZU-CTA-N.config  GIT.config  GOTO-4.config  GWAC.config  Gattini.config  HAO.config  IRIS.config  KAO.config  KPED.config  LSST.config  Lisnyky-AZT8.config  MOSS.config  MXT.config  Makes-60.config  NOWT.config  Nickel.config  OAJ.config  OPD-1.6.config  OST-CDK.config  OWL.config  PS1.config  SNOVA.config  (+19 more)
gwemopt/multi_fov/: display.py  post_processing.py
