[project]
name = "gwemopt"
version = "1.1.1"
description = "Default template for PDM package"
dependencies = [
    'numpy>=1.7.1',
    'scipy>=1.2.1',
    "matplotlib(>=3.9,<3.10)",
    'astropy>=1.1.1',
    'astropy-healpix',
    'python-dateutil',
    'mocpy',
    'astroquery',
    'astroplan',
    'ephem',
    'pyyaml',
    'VOEventLib',
    'joblib',
    'ligo-segments',
    'ligo.skymap',
    'h5py',
    'munkres',
    'shapely',
    "seaborn>=0.13.2",
    "pyarrow>=19.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = ['pytest>=3.1', 'pytest-runner', 'freezegun', 'sqlparse', 'bs4', 'black']
dev = [
    "black>=25.1.0",
]

[tool.pdm]
distribution = false

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]
"data" = ["config/*.config", "input/*", "lightcurves/*/*.dat", "tiling/*.dat"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
